# Fixed Button z-index (weren't clickable as lying under debug window)

--- a/assets/www/wmp.css
+++ b/assets/www/wmp.css
@@ -9,6 +9,11 @@ body {
 	font-size: 12px;
 }
 
+button {
+	z-index: 9999;
+	position: relative;
+}
+
 li {
 	padding-bottom: 4px;
 	margin-bottom: 2px;
